--- a/presentation/placenta_viviparous_presentation.Rnw
+++ b/presentation/placenta_viviparous_presentation.Rnw
@@ -582,9 +582,6 @@ transcriptome, including \textit{ANXA2}, \textit{ANXA1},
 pri.all.lin.spec <- placenta.lineage.specific.table("pri.all")
 setkey(pri.all.lin.spec,"Human Symbol")
 @ 
-\caption{Genes whose expression changed significantly in the primate
-  order as compared to all other analyzed species.}
-\label{tab:primate_lineage_specific}
 \end{table}
 \end{frame}
 
@@ -844,30 +841,32 @@ print(ggplot(combined.long[combined.long$type=="IGF Related",], aes(y=gene, x=sp
 \end{columns}
 \end{frame}
 
-% \begin{frame}{Prolactin}
-% \begin{itemize}
-% \item \elephant is only analyzed mammal with high prolactin expression
-%   (\textit{PRL}) in the placenta
-% \item However, \mouse, \carmeli, and \cow have duplications of
-%   \textit{PRL} with expression}
-% \end{itemize}
-% 
-% \begin{figure}
-% <<prolactin.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
-% 
-% tree.id <-
-%     genes.to.tree[combined.fpkm[gene_short_name=="PRL" & species=="homo sapiens",gene_id],tree]
-% gene.tree.table <- trees[[tree.id]]$table
-% gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-% gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-% plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-%                  gene.tree.table,gene.tree.expression,
-%                  axis.text.size=5,
-%                  fontsize=5)
-% @ 
-% \end{figure}
-% 
-% \end{frame}
+\begin{frame}{Prolactin}
+\begin{columns}
+\column{0.4\textwidth}
+\begin{itemize}
+\item \elephant is only analyzed mammal with high prolactin expression
+  (\textit{PRL}) in the placenta
+\item However, \mouse, \carmeli, and \cow have duplications of
+  \textit{PRL} with expression
+\end{itemize}
+\column{0.6\textwidth}
+\begin{figure}
+<<prolactin.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
+
+tree.id <-
+    genes.to.tree[combined.fpkm[gene_short_name=="PRL" & species=="homo sapiens",gene_id],tree]
+gene.tree.table <- trees[[tree.id]]$table
+gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
+gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
+plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
+                 gene.tree.table,gene.tree.expression,
+                 axis.text.size=5,
+                 fontsize=4)
+@ 
+\end{figure}
+\end{columns}
+\end{frame}
 
 \subsubsection{GH family}
 
@@ -941,6 +940,19 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.
 \end{frame}
 
 \begin{frame}{CGB}
+  \begin{columns}
+\column{0.4\textwidth}
+\begin{itemize}
+\item \textit{CGB} is highly expressed in \human
+
+\item Some expansion of \textit{CGB} in \bonobo, but not highly expressed
+\item High expression of \textit{LHB} in \smonkey
+\begin{itemize}
+\item May be indicative of expansion
+\item Would have to examine assembled transcripts to tell
+\end{itemize}
+\end{itemize}
+\column{0.6\textwidth}
 \begin{figure}
 <<chorionic.somatomammotropin.beta.evolution.tree,echo=FALSE,fig.width=12,fig.height=12,warning=FALSE,message=FALSE>>=
 
@@ -952,126 +964,152 @@ gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
 plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.tree.expression,
                  subtree=c("ENSMODG00000013768","ENSG00000104818"),
                  offset.ratio=1,
-                 fontsize=plot.label.size,
+                 fontsize=10,
                  axis.text.size=3.5
                  )
 @ 
 \end{figure}
+\end{columns}
 \end{frame}
 
 
 \subsection{Relaxin}
 
-\begin{frame}
-Relaxin (\textit{RLN}) is a hormone that has multiple effects during
-pregnancy including increasing maternal blood flow, widening the pubic
-bone and relaxing uterine musculature in preparation for labor. In
-\dog, \elephant, \mouse, \carmeli, and \horse there is high expression
-of relaxin in the term placenta, with little evidence in other species
-examined here (Supplemental \cref{fig:rln2_evolution_tree}). \textit{RLN} is known
-to be produced in the placenta of the pregnant \dog and is used in the
-diagnosis of canine pregnancy
-\cite{Steinetz.ea1989:Serumrelaxinandprogesterone,Tsutsui.ea1991:Determinationofsourceof},
-the luteal ovary and placenta of \pig
-\cite{Hisaw.ea1948:Relaxininovaryof}, and the placenta of \horse
-\cite{Klonisch.ea1997:Placentallocalizationofrelaxin}. However, the
-source of relaxin produced by pregnant \elephant remains unclear
-\cite{Meyer.ea2004:Speciesandfetalgender}. The high rise in relaxin in
-\elephant has been suggested to be a major signal for the initiation
-of labor \cite{Niemuller.ea1998:Plasmaconcentrationsofimmunoreactive}.
-Here we show that the placenta of elephants show high expression of
-relaxin and is likely a major source of \textit{RLN} at term. In
-contrast to the results of
-\cite{Evans.ea1993:mouserelaxingenenucleotide}, we also see expression
-of \textit{RLN} in the placenta of \mouse and \carmeli.
+\begin{frame}{Relaxin}
+  \begin{columns}
+    \column{0.4\textwidth}
+    \begin{itemize}
+    \item \textit{RLN} increasing maternal blood flow, widening the pubic
+      bone and relaxing uterine musculature in preparation for labor
+    \item We show that the placenta is a source of \textit{RLN} in \dog,
+      \elephant, \mouse, \carmeli, and \horse.
+    \end{itemize}
+    \column{0.6\textwidth}
+    \begin{figure}
+<<rln2.evolution.tree,echo=FALSE,fig.width=12,fig.height=12,warning=FALSE,message=FALSE>>=
 
+tree.id <-
+    genes.to.tree[combined.fpkm[gene_short_name=="RLN2" & species=="homo sapiens",gene_id],tree]
+gene.tree.table <- trees[[tree.id]]$table
+gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
+gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
+plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
+                 gene.tree.table,gene.tree.expression,
+                 axis.text.size=5,
+                 fontsize=5)
+@ 
+\end{figure}
+\end{columns}
 \end{frame}
+
 
 \subsection{The Evolution of Placental Expression of Galectins}
 
 \begin{frame}{Galectins}
-Galectins are recognized as major regulators of pregnancy in both
-fetal and maternal tissues
-\cite{Than.ea2012:Galectinsguardiansofeutherian}. Indeed, the
-evolution of new lineage-specific galectins has occurred in both
-primates and ruminants, with the genes \textit{LGALS13},
-\textit{LGALS14}, and \textit{LGALS16} recognized as being
-placenta-specific in \human and regulating immune responses by
-inducing apoptosis of maternal T-cells
-\cite{Than.ea2009:primatesubfamilyofgalectins} (Supplemental
-\cref{fig:galectins_lgals13_evolution_tree}). Indeed, \textit{LGALS14}
-has the highest expression of any galectin in the \human and \smonkey
-placenta (\cref{fig:hormone_genes}, Supplemental
-\cref{fig:galectins_lgals13_evolution_tree}), and other primate
-galectins such as \textit{LGALS13} and \textit{LGALS16} are also
-expressed in \human and \smonkey placenta. However, in the closely
-related \bonobo, \textit{LGALS14} is not found, and \textit{LGALS1} is
-the most abundant galectin. \textit{LGALS1} shows generally high
-expression in all placentas analyzed. \textit{LGALS1} is also involved
-in mediating maternal-fetal immune tolerance, and is expressed in both
-maternal and fetal tissue in primates
-\cite{Than.ea2008:Emergenceofhormonaland}. \textit{LGALS1} placental
-expression was thought to be confined to eutherian mammals, as there
-is evidence of adaptive evolution at this node, as well as the
-appearance of estrogen response elements in eutherian cis-regulatory
-regions \cite{Than.ea2008:Emergenceofhormonaland}. It was unclear as
-to whether galectins such as \textit{LGALS1} were important in the
-regulation of pregnancy in marsupials, as well as eutherians. Here we
-show substantial expression of galectins in the opossum, especially
-\textit{LGALS1} (Supplemental \cref{fig:galectins_evolution_tree}). In
-addition, \textit{LGALS2} is also expressed. The presence of galectins
-at the maternal-fetal interface in \opossum implies that it was also
-present in the ancestral placenta of therian mammals. Indeed, adaptive
-evolution of \textit{LGALS1} on the eutherian stem is likely due to
-the increased invasive nature of eutehrian placentation rather than
-the origination of maternal-fetal tolerance. Although the function of
-\textit{LGALS1} in the marsupial placenta needs to be confirmed, it is
-likely that the mediation of maternal-fetal immune tolerance by
-galectins is an ancient feature of mammalian viviparity.
+\begin{columns}
+\column{0.4\textwidth}
+\begin{itemize}
+\item Galectins are major regulators of pregnancy in fetal and
+  maternal tissues
+\item \textit{LGALS1} mediates maternal-fetal
+  immune tolerance
+\item substantial expression of galectins in the \opossum
+\item consistent with ancestral placenta may have maternal-fetal
+  immune tolerance mediated by galectins
+\end{itemize}
+\column{0.6\textwidth}
+\begin{figure}
+<<galectins.evolution.tree,echo=FALSE,fig.width=12,fig.height=12,warning=FALSE,message=FALSE>>=
 
+tree.id <-
+    genes.to.tree[combined.fpkm[gene_short_name=="LGALS1" & species=="homo sapiens",gene_id],tree]
+gene.tree.table <- trees[[tree.id]]$table
+gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
+gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
+plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
+                 gene.tree.table,gene.tree.expression,
+                 offset=0.8,
+                 axis.text.size=7,
+                 fontsize=7,
+                 subtree=c("ENSMODG00000000457","ENSCAFG00000016577")
+                 )
+@ 
+\end{figure}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\begin{columns}
+\column{0.4\textwidth}
+\begin{itemize}
+\item Evolution of new lineage-specific galectins has occurred in both
+  primates and ruminants, with the genes \textit{LGALS13},
+  \textit{LGALS14}, and \textit{LGALS16} recognized as being
+  placenta-specific in \human and regulating immune responses by
+  inducing apoptosis of maternal T-cells
+  \cite{Than.ea2009:primatesubfamilyofgalectins}
+\end{itemize}
+
+\column{0.6\textwidth}
+\begin{figure}
+<<lgals13.galectins.evolution.tree,echo=FALSE,fig.width=12,fig.height=12,warning=FALSE,message=FALSE>>=
+
+tree.id <-
+    genes.to.tree[combined.fpkm[gene_short_name=="LGALS13" & species=="homo sapiens",gene_id],tree]
+gene.tree.table <- trees[[tree.id]]$table
+gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
+gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
+plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
+                 gene.tree.table,gene.tree.expression,
+                 offset=0.8,
+                 axis.text.size=7,
+                 fontsize=10
+                 )
+@ 
+\end{figure}
+\end{columns}
 \end{frame}
 
 \subsection{The Opossum Placenta and the Evolution of Viviparity}
 
 \begin{frame}
-The \opossum placenta shows expression of genes that either do not
-exist in eutherians or are not found in the term eutherian placenta
-(\cref{tab:top50_opossum_placenta}). The existence of embryonic forms
-of hemoglobin in fetal tissues at term, as evidenced by the expression
-of \textit{HBE} and \textit{HBZ} is a feature of marsupials that is
-generally due to their very short gestation periods. Embryonic
-hemoglobins in marsupials have a lower affinity for oxygen and allow
-for a lower rate of oxygen uptake from maternal tissues
-\cite{Holland.ea1997:Characterizationofembryonicglobin}. One novel
-uncharacterized gene that shows high expression (\textit{LOC10001195}) is not
-found in eutherians; Ensembl gene trees reveal that homologs of this
-gene exist in other amniotes such as birds and turtles, but are not
-present in eutherian mammals. The homolog of this gene in chicken is
-found to expressed in reproductive tract
-\cite{Froman.ea2006:expressedsequencetaganalysis}, but its function is
-unknown. \textit{WFDC2} is a member of the whey acidic protein (WAP)
-family and involved in innate immunity. It is expressed in the mammary
-gland of the tammar wallaby during pregnancy and early lactation
-\cite{Sharp.ea2007:Molecularevolutionofmonotreme}, and present in
-relative abundance in \opossum placenta.
+\begin{itemize}
+\item The \opossum placenta shows expression of genes that either do
+  not exist in eutherians or are not found in the term eutherian
+  placenta
 
+\item The existence of embryonic forms of hemoglobin in fetal tissues
+  at term, as evidenced by the expression of \textit{HBE} and
+  \textit{HBZ} is a feature of marsupials that is generally due to
+  their very short gestation periods.
+
+\item Embryonic hemoglobins in marsupials have a lower affinity for
+  oxygen and allow for a lower rate of oxygen uptake from maternal
+  tissues \cite{Holland.ea1997:Characterizationofembryonicglobin}.
+
+\item One novel uncharacterized gene that shows high expression
+  (\textit{LOC10001195}) is not found in eutherians; Ensembl gene
+  trees reveal that homologs of this gene exist in other amniotes such
+  as birds and turtles, but are not present in eutherian mammals.
+
+\item \textit{WFDC2} is a member of the whey acidic protein (WAP)
+  family and involved in innate immunity.
+\end{itemize}
 \end{frame}
 
 \subsection{Novel Gene Expansions in the Elephant Placenta}
 
 \begin{frame}{PRSS16}
-
-11 genes that are related
-to the \textit{PRSS16} gene, a thymus-specific serine protease that
-may be involved regulating the presentation of self-peptides in CD4+
-T-lymphocytes \cite{Fornari.ea2012:TranscriptionprofilingofPrss16}.
-All 11 of these genes are expressed in the elephant placenta, three of
-which have very abundant mRNAs
-(\cref{tab:top50_elephant_placenta} and \cref{fig:pag2_prss16_ctsl_psg_evolution_tree}C). It is
-possible that this elephant-specific gene family may be involved in
-immunity in the elephant placenta and the mediation of maternal-fetal
-immune tolerance; however, future work will need to test these
-hypotheses. 
+\begin{columns}
+\column{0.4\textwidth}
+\begin{itemize}
+\item \textit{PRSS16}, a thymus-specific serine protease that
+  regulates the presentation of self-peptides in CD4+ T-lymphocytes
+  \cite{Fornari.ea2012:TranscriptionprofilingofPrss16}.
+\item Possibly involved in the mediation of maternal-fetal immune
+  tolerance in \elephant
+\end{itemize}
+\column{0.6\textwidth}
 \begin{figure}
 <<prss16.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 tree.id <-
@@ -1089,6 +1127,7 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.
 
 @ 
 \end{figure}
+\end{columns}
 \end{frame}
 
 
@@ -1102,8 +1141,8 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.
 \item lineage-specific expansions of gene families and differential
   gene expression
 
-\item Identified common expression patterns of 
-
+\item Identified common expression patterns of the mammalian
+  expression
 
 \item Still much more to learn about the changes in placenta
   expression during placentation
@@ -1112,6 +1151,9 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.
   have more information to make stronger inferences about evolution of
   placenta expression
 
+\item Lots to learn about what is actually driving the changes in
+  expression
+
 \end{itemize}
 
 \end{frame}
@@ -1119,7 +1161,7 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.
 % Acronyms
 \input{acronyms}
 
-\begin{frame}[plain]{References}
+\begin{frame}[plain,allowframebreaks]{References}
   \begin{center}
     \mbox{}\vspace{-\baselineskip}
     \printbibliography[heading=none]
