clean up yinotherian discussion; cite nevo book

--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -318,10 +318,10 @@ specific aspects of placental morphology
 \cite{Capellini.ea2011:Placentationandmaternalinvestment}
 (\cref{tab:gestational_periods}).
 
-The placenta arose at some point before the origin of therian mammals,
-a group that includes both marsupials and eutherian or “placental
-mammals”. The term “placental mammals” is misleading, as extant
-yinothereians (such as \textit{Ornithorhynchus anatinus}, the
+The placenta arose at some point before the origin of extant mammals,
+a group that includes marsupials, monotremes, and eutherian or
+“placental mammals”. The term “placental mammals” is misleading, as
+extant yinotherians (such as \textit{Ornithorhynchus anatinus}, the
 platypus) possess a rudimentary placenta, as do marsupials, although
 the direct apposition to maternal tissues lasts for a proportionally
 shorter time during gestation
@@ -466,22 +466,23 @@ Fetal tissue was collected from the placenta of eight mammalian
 species (\human [human], \bonobo [bonobo], \dog [domestic dog], \cow
 [domestic cow], \elephant [African savanna elephant], \opossum [gray
 short-tailed opossum], \galili [blind mole rat from Upper Galilee],
-\carmeli [blind mole rat from northern Israel]). Information on
-specimen ID, place and time of collection, and collector is shown for
-each sample in Supplemental \cref{tab:srr_numbers}. In the case of \bonobo,
-\cow, and \elephant, the placenta was collected at term upon expulsion
-from the mother following delivery. Placental tissue from \human was
-collected upon delivery via a cesarean section. Near-term placental
-tissue from \dog was collected upon the death of the mother from a car
-accident. Placental tissue from \opossum was sampled at fetal stage
-32, roughly one day prior to birth. Only the fetal portion of the
-placenta was sampled at the maternal-fetal interface (i.e. villous
-portion for \human, \bonobo, \dog, and \elephant; cotyledon for \cow;
-diffuse placenta for \opossum). All tissues were collected and stored
-in RNAlater (Life Technologies, Carlsbad, CA) until RNA isolation
-could be performed. Tissues were homogenized in Trizol, and total RNA
-was isolated following the manufacturer's instructions. RNA was
-further purified using RNeasy Midi Kit (Qiagen, Valencia, CA), in
+\carmeli [blind mole rat from northern Israel]
+\cite{Nevo2001:adaptiveradiationofblindsubterraneanmole}). Information
+on specimen ID, place and time of collection, and collector is shown
+for each sample in Supplemental \cref{tab:srr_numbers}. In the case of
+\bonobo, \cow, and \elephant, the placenta was collected at term upon
+expulsion from the mother following delivery. Placental tissue from
+\human was collected upon delivery via a cesarean section. Near-term
+placental tissue from \dog was collected upon the death of the mother
+from a car accident. Placental tissue from \opossum was sampled at
+fetal stage 32, roughly one day prior to birth. Only the fetal portion
+of the placenta was sampled at the maternal-fetal interface (i.e.
+villous portion for \human, \bonobo, \dog, and \elephant; cotyledon
+for \cow; diffuse placenta for \opossum). All tissues were collected
+and stored in RNAlater (Life Technologies, Carlsbad, CA) until RNA
+isolation could be performed. Tissues were homogenized in Trizol, and
+total RNA was isolated following the manufacturer's instructions. RNA
+was further purified using RNeasy Midi Kit (Qiagen, Valencia, CA), in
 conjunction with the RNase-Free DNase Set (Qiagen, Valencia, CA),
 following the manufacturer’s protocol to remove any contaminating DNA
 from the sample. Total RNA was then evaluated on a Nanodrop 1000
